--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_RAPIDAPI_KEY = 'd4db381a1emsha8d4e7cec411a8cp12ed94jsnaa1e3d8fd38f'
+// REACT_APP_RAPIDAPI_KEY = ''
 REACT_APP_CRYPTO_RAPIDAPI_HOST ='coinranking1.p.rapidapi.com'
 REACT_APP_CRYPTO_API_URL = 'https://coinranking1.p.rapidapi.com'
 REACT_APP_NEWS_API_URL = 'https://bing-news-search1.p.rapidapi.com'
